--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Modern animated biography page for showcasing Willube's story, skills, and contact details." />
+    <meta name="description" content="Animated biography for Willube, a music producer and creative developer blending immersive audio with interactive storytelling." />
     <title>Willube · Bio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -45,10 +45,10 @@
                     <p class="eyebrow">Biography</p>
                     <h1>
                         Hello, I'm <span class="gradient-text">Willube</span><br />
-                        a creative explorer of the digital world.
+                        a music producer & creative developer.
                     </h1>
                     <p class="lead">
-                        I turn curiosity into craft, experimenting with design, code, and storytelling to build immersive experiences that feel alive.
+                        I sculpt immersive worlds where beats, live visuals, and code-driven interactions move together in sync—designing sonic stories for the web, stage, and beyond.
                     </p>
                     <div class="hero__actions">
                         <a class="btn primary" href="#contact">Let's collaborate</a>
@@ -73,39 +73,37 @@
         <section class="section about" id="about">
             <div class="container grid-2">
                 <div class="reveal" data-delay="0">
-                    <h2 class="section__title">Crafting stories with movement.</h2>
+                    <h2 class="section__title">Composing at the intersection of rhythm and code.</h2>
                     <p>
-                        From interactive installations to narrative-driven web experiences, I love building moments that surprise and delight.
-                        I blend visual storytelling with technical experimentation, constantly looking for new ways to blur the line between art and technology.
+                        Studio sessions and creative coding labs are my dual habitats. I design multi-sensory narratives, producing tracks that breathe with reactive visuals and interactive performance tools.
                     </p>
                     <p>
-                        My work is shaped by diverse collaborations across music, film, and education. Each project sharpens the way I think about empathy, accessibility,
-                        and the emotional rhythm of a digital experience.
+                        Collaborations with artists, filmmakers, and developers keep me experimenting—whether it's scoring immersive campaigns, building generative instruments, or teaching producers how to think in systems.
                     </p>
                 </div>
                 <div class="about__cards reveal" data-delay="120">
                     <article class="card">
                         <h3>Values</h3>
                         <ul>
-                            <li>Curiosity-first thinking</li>
-                            <li>Inclusive, accessible design</li>
-                            <li>Iterate with intention</li>
+                            <li>Groove-led storytelling</li>
+                            <li>Inclusive, accessible sound</li>
+                            <li>Open-source collaboration</li>
                         </ul>
                     </article>
                     <article class="card">
                         <h3>Focus Areas</h3>
                         <ul>
-                            <li>Immersive web & storytelling</li>
-                            <li>Motion design systems</li>
-                            <li>Creative coding workshops</li>
+                            <li>Hybrid live shows & installations</li>
+                            <li>Realtime audio-reactive visuals</li>
+                            <li>Music tech education</li>
                         </ul>
                     </article>
                     <article class="card">
                         <h3>Currently Exploring</h3>
                         <ul>
-                            <li>WebGL generative worlds</li>
-                            <li>Haptics for web experiences</li>
-                            <li>Adaptive narrative AI</li>
+                            <li>Spatial audio workflows</li>
+                            <li>AI-assisted sound design</li>
+                            <li>Blockchain-enabled fan releases</li>
                         </ul>
                     </article>
                 </div>
@@ -119,30 +117,30 @@
                     <div class="timeline__line" aria-hidden="true"></div>
                     <article class="timeline__item reveal" data-delay="0">
                         <span class="timeline__year">2025</span>
-                        <h3>Leading immersive brand moments</h3>
+                        <h3>Launching the Pulse//Synth tour</h3>
                         <p>
-                            Designing narrative-driven experiences for forward-thinking brands, weaving motion, sound, and interaction into cohesive stories.
+                            Produced and performed a live audiovisual show with a custom-built WebGL engine, syncing modular synth jams with generative stage lighting and crowd-triggered loops.
                         </p>
                     </article>
                     <article class="timeline__item reveal" data-delay="120">
                         <span class="timeline__year">2023</span>
-                        <h3>Creative technologist at Studio Flux</h3>
+                        <h3>Senior creative developer at Resonant Labs</h3>
                         <p>
-                            Brought experimental prototypes to life across web and XR, facilitating workshops to teach artists how to code their own ideas.
+                            Led a team prototyping interactive album launches—building Web Audio API instruments and mixing immersive campaigns for global artists.
                         </p>
                     </article>
                     <article class="timeline__item reveal" data-delay="240">
                         <span class="timeline__year">2021</span>
-                        <h3>Independent digital storyteller</h3>
+                        <h3>Indie producer & sound designer</h3>
                         <p>
-                            Collaborated with musicians and filmmakers to craft interactive releases and digital stages that responded to live performances.
+                            Dropped the "Chromatic Signals" EP, blending breakbeats with reactive visuals coded in TouchDesigner; commissioned for film trailers and VR art spaces.
                         </p>
                     </article>
                     <article class="timeline__item reveal" data-delay="360">
                         <span class="timeline__year">2019</span>
-                        <h3>Graduated with a BFA in New Media</h3>
+                        <h3>Graduated with a BFA in Sonic Media</h3>
                         <p>
-                            Studied the intersection of design, code, and narrative, focusing on how motion influences emotional resonance.
+                            Researched how interactive systems shape musical storytelling, graduating with a thesis on responsive environments for live performance.
                         </p>
                     </article>
                 </div>
@@ -153,43 +151,43 @@
             <div class="container">
                 <div class="section__header reveal" data-delay="0">
                     <h2 class="section__title">Tools & superpowers</h2>
-                    <p>Highlights of my toolkit for building immersive experiences.</p>
+                    <p>My toolkit for turning melodies into interactive journeys.</p>
                 </div>
                 <div class="skills__grid">
                     <article class="skill-card reveal" data-delay="0">
-                        <h3>Experience Design</h3>
-                        <p>Journey mapping, storyboarding, motion systems, accessibility reviews.</p>
+                        <h3>Production & Composition</h3>
+                        <p>Cinematic electronica, genre-bending beats, live instrumentation, toplining.</p>
                         <ul>
-                            <li>Figma & FigJam</li>
-                            <li>After Effects</li>
-                            <li>Principle</li>
+                            <li>Ableton Live & Push</li>
+                            <li>Analog & modular synths</li>
+                            <li>Songwriting camps</li>
                         </ul>
                     </article>
                     <article class="skill-card reveal" data-delay="120">
-                        <h3>Creative Coding</h3>
-                        <p>Generative visuals, rapid prototyping, interactive installations.</p>
+                        <h3>Sound Design & Mixing</h3>
+                        <p>Immersive atmospheres, vocal sculpting, spatial audio, mastering.</p>
                         <ul>
-                            <li>Three.js / WebGL</li>
-                            <li>p5.js</li>
-                            <li>TouchDesigner</li>
+                            <li>UAD & FabFilter suites</li>
+                            <li>Dolby Atmos workflows</li>
+                            <li>Hardware pedal chains</li>
                         </ul>
                     </article>
                     <article class="skill-card reveal" data-delay="240">
-                        <h3>Story-Led Dev</h3>
-                        <p>Responsive front-ends with thoughtful animation and performance.</p>
+                        <h3>Interactive Audio Dev</h3>
+                        <p>Building responsive instruments, web-native DAW tools, and touring visuals.</p>
                         <ul>
-                            <li>TypeScript</li>
-                            <li>Astro & Next.js</li>
-                            <li>GSAP</li>
+                            <li>TypeScript & Web Audio API</li>
+                            <li>Max/MSP & Node.js</li>
+                            <li>Unity + FMOD</li>
                         </ul>
                     </article>
                     <article class="skill-card reveal" data-delay="360">
-                        <h3>Community</h3>
-                        <p>Workshops, mentoring, and open-source contributions to inclusive tech.</p>
+                        <h3>Community & Collabs</h3>
+                        <p>Mentoring emerging producers, speaking on creative tech, open-source music tools.</p>
                         <ul>
-                            <li>Creative youth labs</li>
-                            <li>Open-source design kits</li>
-                            <li>Speaker & facilitator</li>
+                            <li>Producer mentorship collectives</li>
+                            <li>Music tech meetups</li>
+                            <li>Artist residencies</li>
                         </ul>
                     </article>
                 </div>
@@ -200,23 +198,23 @@
             <div class="container">
                 <div class="spotlight__grid">
                     <article class="spotlight__item reveal" data-delay="0">
-                        <h3>Sonar Bloom</h3>
+                        <h3>Neon Tides</h3>
                         <p>
-                            An interactive audiovisual album release where visitors shaped the soundscape through motion, rendered in real-time WebGL.
+                            A collaborative EP paired with a WebGL playground where fans remixed stems in-browser, exporting personalized loops as NFTs and vinyl lathe cuts.
                         </p>
-                        <span class="tag">Featured on CreativeApps</span>
+                        <span class="tag">Billboard Next Sound pick</span>
                     </article>
                     <article class="spotlight__item reveal" data-delay="120">
-                        <h3>Memory Atlas</h3>
+                        <h3>Signal / Noise</h3>
                         <p>
-                            A collaborative narrative map exploring memories of home, blending typography, photography, and AR overlays.
+                            Immersive installation translating EEG data into evolving harmonies and LED choreography, produced with neuroscientists and choreographers.
                         </p>
-                        <span class="tag">SXSW finalist</span>
+                        <span class="tag">SXSW Innovation finalist</span>
                     </article>
                     <article class="spotlight__item reveal" data-delay="240">
-                        <h3>Pulsar Sessions</h3>
+                        <h3>Midnight Compiler</h3>
                         <p>
-                            Live-streamed performances with reactive stage visuals driven by MIDI and crowd interactions.
+                            A livestream series blending live coding, beat sets, and open-source performance patches, featuring rotating guests from the global producer community.
                         </p>
                         <span class="tag">Award-winning</span>
                     </article>
@@ -227,10 +225,9 @@
         <section class="section contact" id="contact">
             <div class="container">
                 <div class="contact__inner reveal" data-delay="0">
-                    <h2 class="section__title">Let's build something memorable</h2>
+                    <h2 class="section__title">Let's craft the next sonic experience</h2>
                     <p>
-                        I'm currently booking collaborations for 2026. Whether it's a bold campaign, an experimental experience, or a community workshop,
-                        I'd love to hear what you're dreaming up.
+                        Booking select collaborations for 2026: immersive album rollouts, experiential stages, interactive sound tools, and scoring for emerging media. Tell me about your project and let's prototype the vibe together.
                     </p>
                     <div class="contact__actions">
                         <a class="btn primary" href="mailto:hello@willube.com">hello@willube.com</a>
