--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Animated biography for Willube, a music producer and creative developer blending immersive audio with interactive storytelling." />
-    <title>Willube · Bio</title>
+    <meta name="description" content="Animated biography for Auri, a 16-year-old music producer and developer from Weimar blending 01099-style beats with secure web tech experiments." />
+    <title>Auri · Bio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
@@ -21,8 +21,8 @@
     <header class="site-header">
         <div class="container">
             <div class="brand">
-                <span class="brand__logo" aria-hidden="true">W</span>
-                <span class="brand__name">Willube</span>
+                <span class="brand__logo" aria-hidden="true">A</span>
+                <span class="brand__name">Auri</span>
             </div>
             <nav class="site-nav" aria-label="Primary">
                 <a href="#about">About</a>
@@ -44,15 +44,16 @@
                 <div class="hero__text reveal" data-delay="0">
                     <p class="eyebrow">Biography</p>
                     <h1>
-                        Hello, I'm <span class="gradient-text">Willube</span><br />
-                        a music producer & creative developer.
+                        Hey, ich bin <span class="gradient-text">Auri</span><br />
+                        Music Producer & Dev aus Weimar.
                     </h1>
                     <p class="lead">
-                        I sculpt immersive worlds where beats, live visuals, and code-driven interactions move together in sync—designing sonic stories for the web, stage, and beyond.
+                        16 Jahre jung (bald 17) und mit FA-Studio bewaffnet baue ich 01099-angehauchte Beats, sichere Tools und interaktive Sounds.
+                        Zwischen Schulabschluss und Studiozeit tüftele ich an Hooks, Vocal-Chains und Web-Experiments.
                     </p>
                     <div class="hero__actions">
-                        <a class="btn primary" href="#contact">Let's collaborate</a>
-                        <a class="btn ghost" href="#timeline">See my journey</a>
+                        <a class="btn primary" href="#contact">Schreib mir</a>
+                        <a class="btn ghost" href="#timeline">Mein Weg</a>
                     </div>
                 </div>
                 <div class="hero__portrait reveal" data-delay="150">
@@ -73,12 +74,14 @@
         <section class="section about" id="about">
             <div class="container grid-2">
                 <div class="reveal" data-delay="0">
-                    <h2 class="section__title">Composing at the intersection of rhythm and code.</h2>
+                    <h2 class="section__title">Zwischen Schulbank, Studio und Command Line.</h2>
                     <p>
-                        Studio sessions and creative coding labs are my dual habitats. I design multi-sensory narratives, producing tracks that breathe with reactive visuals and interactive performance tools.
+                        Ich lebe in Weimar, mache meinen qualifizierenden Hauptschulabschluss und plane den Sprung in Musikproduktion oder Tontechnik.
+                        Wenn ich nicht lerne, schraube ich in FA-Studio an melodischen 100–130 BPM Grooves im Stil von 01099 und Jazeek.
                     </p>
                     <p>
-                        Collaborations with artists, filmmakers, and developers keep me experimenting—whether it's scoring immersive campaigns, building generative instruments, or teaching producers how to think in systems.
+                        Mein Setup: ESI U22 XT, Fifine XLR-Mikro, UADx 1176, FabFilter Pro-Q 3 und Mic Mod-Ketten à la Gustav & Paul.
+                        Parallel bastle ich an sicheren Web-Stacks, Roblox-APIs und lokalen Tools, die meinen PC mit einem Klick tweaken.
                     </p>
                 </div>
                 <div class="about__cards reveal" data-delay="120">
@@ -86,24 +89,24 @@
                         <h3>Values</h3>
                         <ul>
                             <li>Groove-led storytelling</li>
-                            <li>Inclusive, accessible sound</li>
-                            <li>Open-source collaboration</li>
+                            <li>Sound first, safety always</li>
+                            <li>Neugier & Sharing</li>
                         </ul>
                     </article>
                     <article class="card">
                         <h3>Focus Areas</h3>
                         <ul>
-                            <li>Hybrid live shows & installations</li>
-                            <li>Realtime audio-reactive visuals</li>
-                            <li>Music tech education</li>
+                            <li>01099-inspirierte Tracks & EPs</li>
+                            <li>Vocal Chains & Mixing Templates</li>
+                            <li>Sichere APIs & Tools für Creators</li>
                         </ul>
                     </article>
                     <article class="card">
                         <h3>Currently Exploring</h3>
                         <ul>
-                            <li>Spatial audio workflows</li>
-                            <li>AI-assisted sound design</li>
-                            <li>Blockchain-enabled fan releases</li>
+                            <li>Token Auth & Cookie Security</li>
+                            <li>Anti-Cheat & Data Validation</li>
+                            <li>Linux KDE Plasma & Arch Setups</li>
                         </ul>
                     </article>
                 </div>
@@ -117,30 +120,30 @@
                     <div class="timeline__line" aria-hidden="true"></div>
                     <article class="timeline__item reveal" data-delay="0">
                         <span class="timeline__year">2025</span>
-                        <h3>Launching the Pulse//Synth tour</h3>
+                        <h3>Quali-Finale & sichere Beat-Tools</h3>
                         <p>
-                            Produced and performed a live audiovisual show with a custom-built WebGL engine, syncing modular synth jams with generative stage lighting and crowd-triggered loops.
+                            Arbeite am qualifizierenden Hauptschulabschluss und entwickle nebenbei sichere Token-Login-Flows für Roblox-Scripts, damit meine Beat-Community geschützte Sessions teilen kann.
                         </p>
                     </article>
                     <article class="timeline__item reveal" data-delay="120">
-                        <span class="timeline__year">2023</span>
-                        <h3>Senior creative developer at Resonant Labs</h3>
+                        <span class="timeline__year">2024</span>
+                        <h3>Studio-Upgrade & Vocal Chains</h3>
                         <p>
-                            Led a team prototyping interactive album launches—building Web Audio API instruments and mixing immersive campaigns for global artists.
+                            Hab mein Setup mit dem ESI U22 XT, Fifine XLR und 32 GB RAM gepowert, Vocal Chains für Gustav & Paul nachgebaut und mit dem UADx 1176 meine ersten Releases veredelt.
                         </p>
                     </article>
                     <article class="timeline__item reveal" data-delay="240">
-                        <span class="timeline__year">2021</span>
-                        <h3>Indie producer & sound designer</h3>
+                        <span class="timeline__year">2022</span>
+                        <h3>Dual-Boot & PC-Tweaks</h3>
                         <p>
-                            Dropped the "Chromatic Signals" EP, blending breakbeats with reactive visuals coded in TouchDesigner; commissioned for film trailers and VR art spaces.
+                            Z390 AORUS PRO aufgesetzt, RX 6750 XT übertaktet und ein Dual-Boot mit Windows, Arch & KDE Plasma gebaut, um Web-Security-Tests und Beat-Workflows zu trennen.
                         </p>
                     </article>
                     <article class="timeline__item reveal" data-delay="360">
-                        <span class="timeline__year">2019</span>
-                        <h3>Graduated with a BFA in Sonic Media</h3>
+                        <span class="timeline__year">2020</span>
+                        <h3>Erster Beat, erster Traum</h3>
                         <p>
-                            Researched how interactive systems shape musical storytelling, graduating with a thesis on responsive environments for live performance.
+                            Mit 01099s "Albau" im Ohr mein erstes Beat-Remake gebaut und beschlossen, Musikproduktion & sichere Tech-Lösungen zusammenzudenken.
                         </p>
                     </article>
                 </div>
@@ -150,44 +153,44 @@
         <section class="section skills" id="skills">
             <div class="container">
                 <div class="section__header reveal" data-delay="0">
-                    <h2 class="section__title">Tools & superpowers</h2>
-                    <p>My toolkit for turning melodies into interactive journeys.</p>
+                    <h2 class="section__title">Tools & Superpowers</h2>
+                    <p>Das Gear und die Skills, mit denen ich Beats, Sicherheit und Systeme verbinde.</p>
                 </div>
                 <div class="skills__grid">
                     <article class="skill-card reveal" data-delay="0">
                         <h3>Production & Composition</h3>
-                        <p>Cinematic electronica, genre-bending beats, live instrumentation, toplining.</p>
+                        <p>01099-/Jazeek-Vibe, 100–130 BPM, Hookwriting, Recording & Arrangement.</p>
                         <ul>
-                            <li>Ableton Live & Push</li>
-                            <li>Analog & modular synths</li>
-                            <li>Songwriting camps</li>
+                            <li>FA-Studio (aka FL Studio)</li>
+                            <li>UADx 1176 FET, FabFilter Pro-Q 3</li>
+                            <li>Mic Mod Ketten Gustav/Paul</li>
                         </ul>
                     </article>
                     <article class="skill-card reveal" data-delay="120">
                         <h3>Sound Design & Mixing</h3>
-                        <p>Immersive atmospheres, vocal sculpting, spatial audio, mastering.</p>
+                        <p>Vocal Sculpting, Layering, Mastering mit Fokus auf cleanen 01099-Punch.</p>
                         <ul>
-                            <li>UAD & FabFilter suites</li>
-                            <li>Dolby Atmos workflows</li>
-                            <li>Hardware pedal chains</li>
+                            <li>ESI U22 XT Interface</li>
+                            <li>Fifine XLR Mic + Chains</li>
+                            <li>Referenz-Sessions im Homestudio</li>
                         </ul>
                     </article>
                     <article class="skill-card reveal" data-delay="240">
                         <h3>Interactive Audio Dev</h3>
-                        <p>Building responsive instruments, web-native DAW tools, and touring visuals.</p>
+                        <p>Web Audio, sichere APIs und Roblox-Scripting für kollaborative Sessions.</p>
                         <ul>
-                            <li>TypeScript & Web Audio API</li>
-                            <li>Max/MSP & Node.js</li>
-                            <li>Unity + FMOD</li>
+                            <li>TypeScript, Node.js & OAuth</li>
+                            <li>CSRF/XSS Prevention</li>
+                            <li>Roblox DataStores & Webhooks</li>
                         </ul>
                     </article>
                     <article class="skill-card reveal" data-delay="360">
-                        <h3>Community & Collabs</h3>
-                        <p>Mentoring emerging producers, speaking on creative tech, open-source music tools.</p>
+                        <h3>Systems & Performance</h3>
+                        <p>PC-Builds, Overclocking-Setups und lokale Automationen für Artists.</p>
                         <ul>
-                            <li>Producer mentorship collectives</li>
-                            <li>Music tech meetups</li>
-                            <li>Artist residencies</li>
+                            <li>Z390 AORUS PRO Tuning</li>
+                            <li>Windows/Linux Dual-Boots</li>
+                            <li>Automatisierte PC-Tweak-Tools</li>
                         </ul>
                     </article>
                 </div>
@@ -198,25 +201,25 @@
             <div class="container">
                 <div class="spotlight__grid">
                     <article class="spotlight__item reveal" data-delay="0">
-                        <h3>Neon Tides</h3>
+                        <h3>Albau (01099) Re-Make</h3>
                         <p>
-                            A collaborative EP paired with a WebGL playground where fans remixed stems in-browser, exporting personalized loops as NFTs and vinyl lathe cuts.
+                            Reverse-engineered Drums, Chords und Vocal-Chains von "Albau" mit FA-Studio und brachte den Groove auf mein Homestudio-Setup.
                         </p>
-                        <span class="tag">Billboard Next Sound pick</span>
+                        <span class="tag">Community Lieblingsprojekt</span>
                     </article>
                     <article class="spotlight__item reveal" data-delay="120">
-                        <h3>Signal / Noise</h3>
+                        <h3>Secure Beat API</h3>
                         <p>
-                            Immersive installation translating EEG data into evolving harmonies and LED choreography, produced with neuroscientists and choreographers.
+                            Eine REST-API mit Token-Auth, CSRF- und Rate-Limits, über die Freund*innen ihre FL-Session-Files sicher austauschen können.
                         </p>
-                        <span class="tag">SXSW Innovation finalist</span>
+                        <span class="tag">Work in Progress</span>
                     </article>
                     <article class="spotlight__item reveal" data-delay="240">
-                        <h3>Midnight Compiler</h3>
+                        <h3>TweakDash Local</h3>
                         <p>
-                            A livestream series blending live coding, beat sets, and open-source performance patches, featuring rotating guests from the global producer community.
+                            Lokale Web-App, die per Knopfdruck Overclocking-Profile, Audio-Latenz-Modi und Backup-Skripte auf meinem Dual-Boot-System startet.
                         </p>
-                        <span class="tag">Award-winning</span>
+                        <span class="tag">Beta</span>
                     </article>
                 </div>
             </div>
@@ -225,14 +228,15 @@
         <section class="section contact" id="contact">
             <div class="container">
                 <div class="contact__inner reveal" data-delay="0">
-                    <h2 class="section__title">Let's craft the next sonic experience</h2>
+                    <h2 class="section__title">Lass uns Beats & Builds verbinden</h2>
                     <p>
-                        Booking select collaborations for 2026: immersive album rollouts, experiential stages, interactive sound tools, and scoring for emerging media. Tell me about your project and let's prototype the vibe together.
+                        Ich suche nach Collabs für 2026: 01099-Vibe Produktionen, Vocal-Ketten, sichere Web-/Roblox-Integrationen oder Tech-Workshops für Artists.
+                        Schreib mir dein Projekt und wir bauen den Sound plus das System dazu.
                     </p>
                     <div class="contact__actions">
-                        <a class="btn primary" href="mailto:hello@willube.com">hello@willube.com</a>
-                        <a class="btn ghost" href="https://www.linkedin.com" target="_blank" rel="noreferrer">LinkedIn</a>
-                        <a class="btn ghost" href="https://instagram.com" target="_blank" rel="noreferrer">Instagram</a>
+                        <a class="btn primary" href="mailto:auri@willube.com">auri@willube.com</a>
+                        <a class="btn ghost" href="https://github.com/willube" target="_blank" rel="noreferrer">GitHub</a>
+                        <a class="btn ghost" href="https://soundcloud.com" target="_blank" rel="noreferrer">SoundCloud</a>
                     </div>
                 </div>
             </div>
