--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                         Music Producer & Dev aus Weimar.
                     </h1>
                     <p class="lead">
-                        16 Jahre jung (bald 17) und mit FA-Studio bewaffnet baue ich 01099-angehauchte Beats, sichere Tools und interaktive Sounds.
-                        Zwischen Schulabschluss und Studiozeit tüftele ich an Hooks, Vocal-Chains und Web-Experiments.
+                       Mit FA-Studio bewaffnet baue ich 01099-angehauchte Beats, sichere Tools, interaktive Sounds,
+                       Hooks, Vocal-Chains und Web-Experiments.
                     </p>
                     <div class="hero__actions">
                         <a class="btn primary" href="#contact">Schreib mir</a>
@@ -74,23 +74,17 @@
         <section class="section about" id="about">
             <div class="container grid-2">
                 <div class="reveal" data-delay="0">
-                    <h2 class="section__title">Zwischen Schulbank, Studio und Command Line.</h2>
+                    <h2 class="section__title">ZwischenStudio und Command Line.</h2>
                     <p>
-                        Ich lebe in Weimar, mache meinen qualifizierenden Hauptschulabschluss und plane den Sprung in Musikproduktion oder Tontechnik.
-                        Wenn ich nicht lerne, schraube ich in FA-Studio an melodischen 100–130 BPM Grooves im Stil von 01099 und Jazeek.
+                        Ich lebe in Deutschland, und plane den Sprung in Musikproduktion oder Tontechnik.
+                        Wenn ich nicht lerne, schraube ich in FL-Studio an melodischen 100–130 BPM Grooves im Stil von 01099 und Jazeek.
                     </p>
                     <p>
-                        Mein Setup: ESI U22 XT, Fifine XLR-Mikro, UADx 1176, FabFilter Pro-Q 3 und Mic Mod-Ketten à la Gustav & Paul.
-                        Parallel bastle ich an sicheren Web-Stacks, Roblox-APIs und lokalen Tools, die meinen PC mit einem Klick tweaken.
+                        Mein Setup: ESI U22 XT, Neumann XLR-Mikro, UADx 1176, FabFilter Pro-Q 3 und Mic Mod-Ketten à la Gustav & Paul.
+                        Parallel bastle ich an sicheren Web-Stacks, APIs und lokalen Tools, die meinen PC mit einem Klick tweaken.
                     </p>
                 </div>
-                <div class="about__cards reveal" data-delay="120">
-                    <article class="card">
-                        <h3>Values</h3>
-                        <ul>
-                            <li>Groove-led storytelling</li>
-                            <li>Sound first, safety always</li>
-                            <li>Neugier & Sharing</li>
+               
                         </ul>
                     </article>
                     <article class="card">
@@ -120,16 +114,16 @@
                     <div class="timeline__line" aria-hidden="true"></div>
                     <article class="timeline__item reveal" data-delay="0">
                         <span class="timeline__year">2025</span>
-                        <h3>Quali-Finale & sichere Beat-Tools</h3>
+                        <h3>sichere Beat-Tools</h3>
                         <p>
-                            Arbeite am qualifizierenden Hauptschulabschluss und entwickle nebenbei sichere Token-Login-Flows für Roblox-Scripts, damit meine Beat-Community geschützte Sessions teilen kann.
+                            entwickle nebenbei sichere Token-Login-Flows für Roblox-Scripts, damit meine Beat-Community geschützte Sessions teilen kann.
                         </p>
                     </article>
                     <article class="timeline__item reveal" data-delay="120">
                         <span class="timeline__year">2024</span>
                         <h3>Studio-Upgrade & Vocal Chains</h3>
                         <p>
-                            Hab mein Setup mit dem ESI U22 XT, Fifine XLR und 32 GB RAM gepowert, Vocal Chains für Gustav & Paul nachgebaut und mit dem UADx 1176 meine ersten Releases veredelt.
+                            Hab mein Setup mit dem ESI U22 XT, Neumann XLR und 32 GB RAM gepowert, Vocal Chains für Gustav & Paul nachgebaut und mit dem UADx 1176 meine ersten Releases veredelt.
                         </p>
                     </article>
                     <article class="timeline__item reveal" data-delay="240">
@@ -171,17 +165,17 @@
                         <p>Vocal Sculpting, Layering, Mastering mit Fokus auf cleanen 01099-Punch.</p>
                         <ul>
                             <li>ESI U22 XT Interface</li>
-                            <li>Fifine XLR Mic + Chains</li>
+                            <li>Neumann XLR Mic + Chains</li>
                             <li>Referenz-Sessions im Homestudio</li>
                         </ul>
                     </article>
                     <article class="skill-card reveal" data-delay="240">
                         <h3>Interactive Audio Dev</h3>
-                        <p>Web Audio, sichere APIs und Roblox-Scripting für kollaborative Sessions.</p>
+                        <p>Web Audio, sichere APIs und Scripting für kollaborative Sessions.</p>
                         <ul>
                             <li>TypeScript, Node.js & OAuth</li>
                             <li>CSRF/XSS Prevention</li>
-                            <li>Roblox DataStores & Webhooks</li>
+                            <li>DataStores & Webhooks</li>
                         </ul>
                     </article>
                     <article class="skill-card reveal" data-delay="360">
@@ -230,13 +224,12 @@
                 <div class="contact__inner reveal" data-delay="0">
                     <h2 class="section__title">Lass uns Beats & Builds verbinden</h2>
                     <p>
-                        Ich suche nach Collabs für 2026: 01099-Vibe Produktionen, Vocal-Ketten, sichere Web-/Roblox-Integrationen oder Tech-Workshops für Artists.
+                        Ich suche nach Collabs für 2026: 01099-Vibe Produktionen, Vocal-Ketten, sichere Web Integrationen oder Tech-Workshops für Artists.
                         Schreib mir dein Projekt und wir bauen den Sound plus das System dazu.
                     </p>
                     <div class="contact__actions">
-                        <a class="btn primary" href="mailto:auri@willube.com">auri@willube.com</a>
+                        <a class="btn primary" href="mailto:privataury@gmail.com">privataury@gmail.com</a>
                         <a class="btn ghost" href="https://github.com/willube" target="_blank" rel="noreferrer">GitHub</a>
-                        <a class="btn ghost" href="https://soundcloud.com" target="_blank" rel="noreferrer">SoundCloud</a>
                     </div>
                 </div>
             </div>
