--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                     <p class="eyebrow">Biography</p>
                     <h1>
                         Hey, ich bin <span class="gradient-text">Auri</span><br />
-                        Music Producer & Dev aus Weimar.
+                        Music Producer & Dev aus Erfurt.
                     </h1>
                     <p class="lead">
-                       Mit FA-Studio bewaffnet baue ich 01099-angehauchte Beats, sichere Tools, interaktive Sounds,
+                       Mit FL-Studio baue ich 01099-angehauchte Beats, sichere Tools, interaktive Sounds,
                        Hooks, Vocal-Chains und Web-Experiments.
                     </p>
                     <div class="hero__actions">
@@ -74,7 +74,7 @@
         <section class="section about" id="about">
             <div class="container grid-2">
                 <div class="reveal" data-delay="0">
-                    <h2 class="section__title">ZwischenStudio und Command Line.</h2>
+                    <h2 class="section__title">Zwischen Studio und Command Line.</h2>
                     <p>
                         Ich lebe in Deutschland, und plane den Sprung in Musikproduktion oder Tontechnik.
                         Wenn ich nicht lerne, schraube ich in FL-Studio an melodischen 100–130 BPM Grooves im Stil von 01099 und Jazeek.
